# MFTI-workshop-project

./: .gitignore  Dockerfile_migration  docker-compose.yml  makefile  pyproject.toml  settings.toml
alembic/: env.py
alembic/versions/: 0d8810809613_init.py  28cf1ac29a7e_.py  89020d92b943_add_models.py
app/: README.md  pyproject.toml  settings.toml
app/src/: main.py
app/src/api/v1/: misc.py
app/src/configs/: app.py
app/src/schemas/: misc_schema.py
nginx/: default.conf
src/: cache.py  database.py  example.py  main.py  pass.py
src/api/v1/: auth_api.py  caegory_api.py  misc.py  post_api.py
src/configs/: __init__.py  app.py
src/models/: __init__.py  base.py  category.py  post.py  users.py
src/repositories/: auth.py  category.py  posts.py  user.py
src/schemas/: auth_schema.py  category_schema.py  misc_schema.py  post_schema.py  user_schema.py
src/services/: auth_service.py  category_service.py  post_service.py  user_service.py
tests/: conftest.py
tests/function/: test_demo.py
